--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_PORT=8080
+
+GOOGLE_CLIENT_ID=743055884385-e1ghe3u1fu5nu1isj82kd46qp0qdas13.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://localhost:8088
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
