--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,18 +25,12 @@ services:
             - redis
             - meilisearch
             - selenium
-    redis:
-        image: 'redis:alpine'
+    memcached:
+        image: 'memcached:alpine'
         ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
-        volumes:
-            - 'sail-redis:/data'
+            - '11211:11211'
         networks:
             - sail
-        healthcheck:
-            test: ["CMD", "redis-cli", "ping"]
-            retries: 3
-            timeout: 5s
     meilisearch:
         image: 'getmeili/meilisearch:latest'
         ports:
@@ -66,7 +60,5 @@ networks:
     sail:
         driver: bridge
 volumes:
-    sail-redis:
-        driver: local
     sail-meilisearch:
         driver: local
